# open_video_matrix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sample_config.txt
.github/workflows/: cmake.yml
src/: .decklink_output.cpp.swp  CMakeLists.txt  NDI.hpp  base64.hpp  colour_input.cpp  colour_source.cpp  decklink_input.cpp  decklink_output.cpp  ipc_shared_object.hpp  media_input.cpp  ndi_input.cpp  ndi_output.cpp  open_rpc.hpp  pdf_input.cpp  presentation_input.cpp  presentation_source.cpp  router.cpp  router_html.hpp  test_open_rpc.cpp  triple_buffer.hpp  vlc_input.cpp
src/colour_input_rust/: Cargo.toml
src/colour_input_rust/src/: main.rs
src/controller/: CMakeLists.txt  beast.hpp  chat_client.html  http_session.cpp  http_session.hpp  listener.hpp  log.hpp  main.cpp  net.hpp  websocket_session.hpp
src/ffmpeg/: Cargo.toml  build.rs  ffmpeg_wrapper.h
src/ffmpeg/src/: lib.rs
src/ipc_shared_object_rust/: Cargo.toml  build.rs
src/ipc_shared_object_rust/src/: lib.rs
src/media_input_rust/: Cargo.toml  build.rs  ffmpeg_wrapper.h
src/media_input_rust/src/: ffmpeg.rs  ffmpeg_c.rs  main.rs  srt.rs  srt_c.rs
src/server/: beast.hpp  http_session.hpp  listener.hpp  log.hpp  server.hpp  synchronised.hpp  websocket_session.hpp
src/triple_buffer_rust/: Cargo.toml  build.rs
src/triple_buffer_rust/src/: lib.rs
src/video_player_test/: video_player.cpp
src/vlc_input_rust/: Cargo.toml  build.rs
src/vlc_input_rust/src/: main.rs  vlc.rs
src/web_source/: CMakeLists.txt  main.cpp
src/web_source_cef/: CMakeLists.txt  main.cpp
src/web_source_servo/: Cargo.toml
src/webrtc_output/: Cargo.toml
src/webrtc_output/src/: main.rs
