[package]
name = "webrtc_output"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.11"
base64 = "0.13.0"
bytes = "1.1"
chrono = "0.4.23"
clap = "3.0"
dcv-color-primitives = "0.5.3"
dioxus = { version = "^0.3.0", features = ["html"] }
dioxus-liveview = { version = "^0.3.0", features = ["axum"] }
env_logger = "0.9"
fermi = "^0.3.0"
ffmpeg = { path = "../ffmpeg" }
flume = "0.10.14"
futures = "0.3.27"
hyper = { version = "0.14", features = ["full"] }
ipc_shared_object = { path = "../ipc_shared_object_rust" }
lazy_static = "1.4"
log = "0.4.16"
rand = "0.8"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
tokio-tungstenite = "0.18.0"
tokio-util = { version = "0.7", features = ["codec"] }
triple_buffer = { path = "../triple_buffer_rust" }
tungstenite = "0.18.0"
vpx-encode = { version = "0.6.2", features = ["ffi-generate"] }
webrtc = "0.7.1"
websocket = "0.26.5"
